@@ -1,14 +1,22 @@
 package com.truongvu.blogrestapi.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.truongvu.blogrestapi.dto.ImageDTO;
 import com.truongvu.blogrestapi.entity.Image;
 import com.truongvu.blogrestapi.entity.Post;
+import com.truongvu.blogrestapi.exception.BlogAPIException;
+import com.truongvu.blogrestapi.exception.QueryException;
 import com.truongvu.blogrestapi.exception.ResourceNotFoundException;
 import com.truongvu.blogrestapi.repository.ImageRepository;
 import com.truongvu.blogrestapi.repository.PostRepository;
+import com.truongvu.blogrestapi.service.redis.RedisService;
 import com.truongvu.blogrestapi.validate.ValidateFile;
 import lombok.RequiredArgsConstructor;
+import org.hibernate.engine.jdbc.spi.SqlExceptionHelper;
 import org.modelmapper.ModelMapper;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
@@ -24,12 +32,29 @@ public class ImageServiceImp implements ImageService {
     private final PostRepository postRepository;
     private final ImageRepository imageRepository;
     private final ValidateFile validateFile;
-    private final ModelMapper modelMapper;
+    private final RedisService redisService;
+    private final ObjectMapper objectMapper;
 
     @Override
     public List<ImageDTO> getAllImage() {
-        List<Image> imageList = imageRepository.findAll();
-        return imageList.stream().map(this::mapToDTO).collect(Collectors.toList());
+        String imageList_string = (String) redisService.get("images");
+        if (imageList_string == null) {
+            List<ImageDTO> imageDTOList = imageRepository.findAll().stream().map(this::mapToDTO).toList();
+            try {
+                imageList_string = objectMapper.writeValueAsString(imageDTOList);
+                redisService.set("images", imageList_string);
+                redisService.setTimeToLive("images", 5);
+            } catch (Exception exception) {
+                throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while setting value images in Redis");
+            }
+            return imageDTOList;
+        }
+
+        try {
+            return objectMapper.readValue(imageList_string, new TypeReference<List<ImageDTO>>() {});
+        } catch (JsonProcessingException e) {
+            throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while reading value images in Redis");
+        }
     }
 
     @Override
@@ -41,14 +66,14 @@ public class ImageServiceImp implements ImageService {
     public List<ImageDTO> uploadImage(MultipartFile[] files) throws IOException {
         List<ImageDTO> imageDTOList = new ArrayList<>();
         try {
-            for(MultipartFile file : files) {
+            for (MultipartFile file : files) {
                 validateFile.validateFile(file);
             }
         } catch (Exception exception) {
             throw new RuntimeException("Uploading process image fail!");
         }
 
-        for(MultipartFile file : files) {
+        for (MultipartFile file : files) {
             String fileName = StringUtils.cleanPath(Objects.requireNonNull(file.getOriginalFilename()));
             Image image = new Image(fileName, file.getContentType(), file.getBytes(), LocalDateTime.now());
             imageRepository.save(image);
@@ -67,11 +92,16 @@ public class ImageServiceImp implements ImageService {
 
     @Override
     public ImageDTO addImageForPost(long postId, ImageDTO imageDTO) {
-        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post","id",postId));
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
         Image image = mapToEntity(imageDTO);
         post.setImage(image);
+        redisService.delete("post" + postId);
+        try {
+            postRepository.save(post);
+        } catch (Exception exception) {
+            throw new QueryException(HttpStatus.BAD_REQUEST, "Image has been selected for another post");
+        }
 
-        postRepository.save(post);
         return mapToDTO(image);
     }
 
