@@ -1,6 +1,9 @@
 package com.truongvu.blogrestapi.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.truongvu.blogrestapi.dto.CommentDTO;
@@ -16,6 +19,7 @@ import com.truongvu.blogrestapi.exception.ResourceNotFoundException;
 import com.truongvu.blogrestapi.repository.CategoryRepository;
 import com.truongvu.blogrestapi.repository.CommentRepository;
 import com.truongvu.blogrestapi.repository.PostRepository;
+import com.truongvu.blogrestapi.service.redis.RedisService;
 import com.truongvu.blogrestapi.validate.handler.ValidationHandler;
 import com.truongvu.blogrestapi.validate.post.ValidatePostCategory;
 import com.truongvu.blogrestapi.validate.post.ValidatePostImage;
@@ -23,12 +27,17 @@ import com.truongvu.blogrestapi.validate.post.ValidatePostLength;
 import lombok.RequiredArgsConstructor;
 import org.hibernate.engine.jdbc.spi.SqlExceptionHelper;
 import org.modelmapper.ModelMapper;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.dao.InvalidDataAccessApiUsageException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.repository.Modifying;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -40,11 +49,14 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @Service
+@EnableCaching
 @RequiredArgsConstructor
 public class PostServiceImp implements PostService {
+    private final RedisService redisService;
     private final PostRepository postRepository;
     private final CategoryRepository categoryRepository;
     private final CommentRepository commentRepository;
+    private final ObjectMapper objectMapper;
     private final ValidationHandler validationHandler = ValidationHandler.link(new ValidatePostLength(), new ValidatePostCategory(), new ValidatePostImage());
 
     @Transactional
@@ -62,7 +74,6 @@ public class PostServiceImp implements PostService {
         if (validationHandler.check(post) != null) {
             throw new BlogAPIException(HttpStatus.BAD_REQUEST, validationHandler.check(post));
         }
-//        Post savedPost = postRepository.save(post);
         postRepository.insertNewPost(post);
 
         return postDTO;
@@ -70,18 +81,51 @@ public class PostServiceImp implements PostService {
 
     @Override
     public List<PostDTO> getAllPosts(int pageNo, int pageSize, String sortBy) {
-        Pageable pageable = PageRequest.of(pageNo, pageSize, Sort.by(sortBy));
-        Page<Post> page = postRepository.findAll(pageable);
+        String key = "posts:page:" + pageNo + ":size:" + pageSize + ":sortBy:" + sortBy;
+        String postByPagination = (String) redisService.get(key);
+        if(postByPagination == null) {
+            Pageable pageable = PageRequest.of(pageNo, pageSize, Sort.by(sortBy));
+            Page<Post> page = postRepository.findAll(pageable);
+            List<PostDTO> postDTOList = page.getContent().stream().map(this::mapToDTO).toList();
+            try {
+                postByPagination = objectMapper.writeValueAsString(postDTOList);
+                redisService.set(key, postByPagination);
+                redisService.setTimeToLive(key, 5);
+            } catch (JsonProcessingException exception) {
+                throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while setting value postPagination in Redis");
+            }
+            return postDTOList;
+        }
 
-        List<Post> listPost = page.getContent();
-
-        return listPost.stream().map(this::mapToDTO).collect(Collectors.toList());
+        try {
+            return objectMapper.readValue(postByPagination, new TypeReference<List<PostDTO>>() {});
+        } catch (JsonProcessingException e) {
+            throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while reading value postPagination in Redis");
+        }
     }
+
 
     @Override
     public List<PostDTO> getAllPostsWithoutPageSize() {
-        List<Post> posts = postRepository.findAllPost();
-        return posts.stream().map(this::mapToDTO).collect(Collectors.toList());
+        String postsList_string = (String) redisService.get("posts");
+        if (postsList_string == null) {
+            List<PostDTO> postsDTO = postRepository.findAllPost().stream().map(this::mapToDTO).toList();
+            try {
+                postsList_string = objectMapper.writeValueAsString(postsDTO);
+                redisService.set("posts", postsList_string);
+                redisService.setTimeToLive("posts", 1);
+            } catch (JsonProcessingException exception) {
+                throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while setting value posts in Redis");
+            }
+            return postsDTO;
+        }
+
+        try {
+            return objectMapper.readValue(postsList_string, new TypeReference<List<PostDTO>>() {});
+        } catch (JsonProcessingException e) {
+            throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while reading value posts in Redis");
+        }
+
     }
 
     @Override
@@ -104,19 +148,48 @@ public class PostServiceImp implements PostService {
 
     @Override
     public PostDTO findById(Long id) {
-        Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "id", id));
-        return mapToDTO(post);
+        String postDTO_string = (String) redisService.get("post" + id);
+        if (postDTO_string == null) {
+            Post post = postRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Post", "id", id));
+            PostDTO postDTO = mapToDTO(post);
+            try {
+                postDTO_string = objectMapper.writeValueAsString(postDTO);
+                redisService.set("post" + id, postDTO_string);
+                redisService.setTimeToLive("post" + id, 5);
+            } catch (JsonProcessingException exception) {
+                throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while setting value postId in Redis");
+            }
+            return postDTO;
+        }
+
+        try {
+            return objectMapper.readValue(postDTO_string, PostDTO.class);
+        } catch (Exception exception) {
+            throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while reading value postId in Redis");
+        }
     }
 
     @Transactional
     @Override
     public PostDTO updatePost(PostDTO newPostDTO, long postId) {
+        redisService.delete("post" + postId);
+
         try {
             postRepository.updatePost(postId, newPostDTO.getTitle(), newPostDTO.getDescription(), newPostDTO.getContent());
         } catch (Exception exception) {
             throw new QueryException(HttpStatus.BAD_REQUEST, "No change for this post");
         }
-        // postRepository.updatePost(newPostDTO.getId(), newPostDTO.getTitle(), newPostDTO.getDescription(), newPostDTO.getContent());
+
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
+        PostDTO postDTO = mapToDTO(post);
+
+        try {
+            String postDTO_string = objectMapper.writeValueAsString(postDTO);
+            redisService.set("post" + postId, postDTO_string);
+            redisService.setTimeToLive("post" + postId, 1);
+        } catch (JsonProcessingException exception) {
+            throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while updating value postId in Redis");
+        }
 
         return newPostDTO;
     }
@@ -126,12 +199,31 @@ public class PostServiceImp implements PostService {
     public void deletePost(Long id) {
         commentRepository.deleteCommentsByPostId(id);
         postRepository.deletePost(id);
+        redisService.delete("post" + id);
     }
 
     @Override
     public List<PostDTO> getPostsByCategory(long categoryId) {
-        List<Post> posts = postRepository.findByCategoryId(categoryId);
-        return posts.stream().map(this::mapToDTO).collect(Collectors.toList());
+        String post_category = (String) redisService.get("postByCategory" + categoryId);
+
+        if(post_category == null) {
+            List<PostDTO> postsDTO = postRepository.findByCategoryId(categoryId).stream().map(this::mapToDTO).toList();
+            try {
+                post_category = objectMapper.writeValueAsString(postsDTO);
+                redisService.set("postByCategory" + categoryId, post_category);
+                redisService.setTimeToLive("postByCategory" + categoryId, 5);
+            } catch (JsonProcessingException exception) {
+                throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while setting value postByCategoryId in Redis");
+            }
+            return postsDTO;
+        }
+
+        try {
+            return objectMapper.readValue(post_category, new TypeReference<List<PostDTO>>() {});
+        } catch (JsonProcessingException e) {
+            throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Error while reading value posts in Redis");
+        }
+
     }
 
     private PostDTO mapToDTO(Post post) {
